--- a/_region_.tex
+++ b/_region_.tex
@@ -1,4 +1,4 @@
-\documentclass[preprint,12pt,a4paper]{elsarticle}
+\message{ !name(2020_EFM_MPM_Eigensoftening.tex)}\documentclass[preprint,12pt,a4paper]{elsarticle}
 
 \usepackage{lineno,hyperref}
 \usepackage{float}
@@ -87,6 +87,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{document}
+
+\message{ !name(2020_EFM_MPM_Eigensoftening.tex) !offset(-3) }
+
 
 \begin{frontmatter}
 
@@ -453,11 +456,10 @@ in the Figure \ref{fig:Damage-ft-wc}, it is calculated as,
  \end{equation}
  
 Following Bazant~\cite{Bazant83} crack-model, \cite{Navas_2017_ES}
-introduced a band width $h_{\epsilon}$, which has values between two
-and four times the maximum size of the aggregates for the
-concrete. The effective fracture strain $\varepsilon_{\epsilon,f}$ is
-defined as the difference between the strain at crack initialization,
-$\varepsilon_1(\vec{x}_p^{0})$, and the current strain, $\varepsilon_1(\vec{x}_p^{k+1})$, for material
+introduced a band width $h_{\epsilon}$. The effective fracture strain
+$\varepsilon_{\epsilon,f}$ is defined as the difference between the
+strain at crack initialization, $\varepsilon_1(\vec{x}_p^{0})$, and
+the current strain, $\varepsilon_1(\vec{x}_p^{k+1})$, for material
 point $p$. Also, $\varepsilon_{\epsilon,f}$ can be represented as the
 current crack opening $w_n$ within the band width,
 $h_{\epsilon}$. Therefore,
@@ -625,3 +627,4 @@ The first author acknowledges the fellowship Agustín de Betancourt 262390106114
 \bibliography{Biblio/Biblio} 
 
 \end{document}
+\message{ !name(2020_EFM_MPM_Eigensoftening.tex) !offset(-630) }
