--- a/Biblio/Biblio.bib
+++ b/Biblio/Biblio.bib
@@ -111,6 +111,35 @@ year = {2018}
 % Fracture --------------------------------------------
 %------------------------------------------------------
 
+@article{Wang_2020,
+author = {Wang, Yingnan and Tran, Hieu T. and Nguyen, Giang D. and Ranjith, Pathegama G. and Bui, Ha H.},
+title = {Simulation of mixed-mode fracture using SPH particles with an embedded fracture process zone},
+journal = {International Journal for Numerical and Analytical Methods in Geomechanics},
+volume = {n/a},
+number = {n/a},
+pages = {},
+keywords = {cohesive fracture law, mixed-mode, regularisation, rock fracture, smoothed particle hydrodynamics (SPH)},
+doi = {10.1002/nag.3069},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/nag.3069},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/nag.3069}
+}
+
+@article{Wang_2019,
+title = {A new SPH-based continuum framework with an embedded fracture process zone for modelling rock fracture},
+keywords = {Cohesive fracture, Regularisation, Rock fracture, Size effect, Size-dependent constitutive model, Smoothed particle hydrodynamics},
+author = {Yingnan Wang and Bui, {Ha H.} and Nguyen, {Giang D.} and Ranjith, {P. G.}},
+year = {2019},
+month = {3},
+day = {1},
+doi = {10.1016/j.ijsolstr.2018.09.019},
+language = {English},
+volume = {159},
+pages = {40--57},
+journal = {International Journal of Solids and Structures},
+issn = {0020-7683},
+publisher = {Elsevier}
+}
+
 @article{Navas_2018_ES,
 author = {Navas, Pedro and Yu, Rena and Ruiz, Gonzalo},
 year = {2018},
@@ -131,6 +160,56 @@ title = {Modeling the dynamic fracture in concrete: an eigensoftening meshfree a
 volume = {113},
 journal = {International Journal of Impact Engineering},
 doi = {10.1016/j.ijimpeng.2017.11.004}
+}
+
+@article{RABCZUK_2017,
+title = {A peridynamics formulation for quasi-static fracture and contact in rock},
+journal = {Engineering Geology},
+volume = {225},
+pages = {42 - 48},
+year = {2017},
+note = {Special Issue: Characterisation of Fractures in Rock: from Theory to Practice (ROCKFRAC)},
+issn = {0013-7952},
+doi = {https://doi.org/10.1016/j.enggeo.2017.05.001},
+url = {http://www.sciencedirect.com/science/article/pii/S0013795217306907},
+author = {Timon Rabczuk and Huilong Ren},
+keywords = {Brittle fracture, Quasi-static, Artificial damping, Contact, Mohr-Coulomb model}
+}
+
+@article{Muthu_2013,
+author = {Muthu, Nelson and Maiti, S. and Falzon, B.G. and Guiamatsia, I.},
+year = {2013},
+month = {02},
+pages = {},
+title = {A comparison of stress intensity factors obtained through crack closure integral and other approaches using eXtended element-free Galerkin method},
+volume = {52},
+journal = {Computational Mechanics},
+doi = {10.1007/s00466-013-0834-y}
+}
+
+@article{Zhuang_2012,
+author = {Zhuang, Xiaoying and Augarde, Charles and Mathisen, Kjell},
+year = {2012},
+month = {12},
+pages = {969-998},
+title = {Fracture modeling using meshless methods and level sets in 3D: Framework and modeling},
+volume = {92},
+journal = {International Journal for Numerical Methods in Engineering},
+doi = {10.1002/nme.4365}
+}
+
+@article{HA_2011,
+title = {Characteristics of dynamic brittle fracture captured with peridynamics},
+journal = {Engineering Fracture Mechanics},
+volume = {78},
+number = {6},
+pages = {1156 - 1168},
+year = {2011},
+issn = {0013-7944},
+doi = {https://doi.org/10.1016/j.engfracmech.2010.11.020},
+url = {http://www.sciencedirect.com/science/article/pii/S0013794410004959},
+author = {Youn Doh Ha and Florin Bobaru},
+keywords = {Crack-path instability, Crack branching, Dynamic brittle fracture, Peridynamics, Nonlocal methods}
 }
 
 @article{Nairn_2011,
@@ -186,6 +265,28 @@ volume = {6},
 journal = {CMES. Computer Modeling in Engineering & Sciences}
 }
 
+@article{Sulsky_2004,
+author = {DL, Sulsky and Schreyer, L.},
+year = {2004},
+month = {05},
+pages = {423-445},
+title = {MPM simulation of dynamic material failure with a decohesion constitutive model},
+volume = {23},
+journal = {European Journal of Mechanics - A/Solids},
+doi = {10.1016/j.euromechsol.2004.02.007}
+}
+
+@article{Chen_2003,
+author = {Chen, Zhenmao and Feng, R. and An, Xin and Shen, Luming},
+year = {2003},
+month = {04},
+pages = {1979 - 1997},
+title = {A computational model for impact failure with shear‐induced dilatancy},
+volume = {56},
+journal = {International Journal for Numerical Methods in Engineering},
+doi = {10.1002/nme.651}
+}
+
 @Article{Nairn_2003,
 AUTHOR = {Nairn, John},
 TITLE = {Material Point Method Calculations with Explicit Cracks},
@@ -210,6 +311,17 @@ journal = {Computer Methods in Applied Mechanics and Engineering},
 doi = {10.1016/S0045-7825(01)00377-2}
 }
 
+@article{Chen_2002,
+author = {Chen, Zhenmao and Hu, W. and Shen, Luming and An, Xin and Brannon, Rebecca},
+year = {2002},
+month = {11},
+pages = {1873-1890},
+title = {An evaluation of the MPM for simulating dynamic failure with damage diffusion},
+volume = {69},
+journal = {Engineering Fracture Mechanics},
+doi = {10.1016/S0013-7944(02)00066-8}
+}
+
 @article{Schreyer_2002
 author = {Schreyer, H.L. and Sulsky, D.L. and Zhou, S.-J},
 year = {2002},
@@ -219,6 +331,32 @@ title = {Modeling delamination as a strong discontinuity with the material point
 volume = {191},
 journal = {Computer Methods in Applied Mechanics and Engineering},
 doi = {10.1016/S0045-7825(01)00409-1}
+}
+
+@article{BELYTSCHKO_2000,
+title = {Element-free galerkin methods for dynamic fracture in concrete},
+journal = {Computer Methods in Applied Mechanics and Engineering},
+volume = {187},
+number = {3},
+pages = {385 - 399},
+year = {2000},
+issn = {0045-7825},
+doi = {https://doi.org/10.1016/S0045-7825(00)80002-X},
+url = {http://www.sciencedirect.com/science/article/pii/S004578250080002X},
+author = {T. Belytschko and D. Organ and C. Gerlach}
+}
+
+@article{BELYTSCHKO_1995,
+title = {Element-free galerkin methods for static and dynamic fracture},
+journal = {International Journal of Solids and Structures},
+volume = {32},
+number = {17},
+pages = {2547 - 2570},
+year = {1995},
+issn = {0020-7683},
+doi = {https://doi.org/10.1016/0020-7683(94)00282-2},
+url = {http://www.sciencedirect.com/science/article/pii/0020768394002822},
+author = {T. Belytschko and Y.Y. Lu and L. Gu and M. Tabbara}
 }
 
 @ARTICLE{Barenblatt, 
